2016-xx-xx 1.2.8 GZip packed local XMLTV files can be read
                 Password-free IP mask added into advanced configuration
                 Fix for login on iOS devices
                 Logout link added

2016-04-06 1.2.7 Fix for table switches
                 Fix for overnight records using EPG chart

2016-04-01 1.2.6 Fix for switches being unswitched
                 Fix for table data being purged

2016-03-28 1.2.5 DSM 6.0 hotfix

2016-03-24 1.2.4 XMLTV Support for non-standard fields                 

2016-01-21 1.2.3 Recurrent records fixed

2016-01-03 1.2.2 Fixed switches

2015-12-11 1.2.1 Several bug fixes

2015-12-10 1.2.0 EPG zoom redesigned and moved to EPG chart page
                 Further theme support for tables
                 EPG grab is now deprecated and will be completely removed in a future version, XMLTV should be the only way for now
                 Some unneeded redirects and reloads removed
                 Some visual and layout improvements
                 Keyword tag for EPG list added (for example /epglist&UFO should always show all events with 'UFO')
                 Saving such URL as a favorite allows a quick access. Extended support may be added later.
                 Dependencies updated:
                    - jQuery
                    - jQuery Mobile
                    - DataTables
                    - CherryPy
                 Several bug fixes after dependencies update

2015-11-20 1.1.4 Record&Edit support for both EPG pages with no redirect
                 Fix for chunked streams (thanks Karl)

2015-09-02 1.1.3 Proxy support for ffmpeg added

2015-08-11 1.1.2 Internal retries for HTTP connection added

2015-08-03 1.1.1 Postprocessing added (can be used to trigger media index)

2015-06-05 1.1.0 Log output changed
                 rtsp added per default
                 Retry count added in Advanced config tab
                 Bug fixes
                 Release version
